integrated with category management